[gd_scene load_steps=52 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://topdown_floor.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Gameplay.gd" type="Script" id=3]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=4]

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 16, 0, 0, 0, 0, 16, 16, 16 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( 16, 48, 0, 48, 0, 64, 16, 64 )

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 64, 0, 48, 0, 48, 16, 64, 16 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 16, 64, 0, 64, 0, 0, 64, 0, 64, 16, 16, 16 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 48, 64, 48, 64, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=14]
polygon = PoolVector2Array( 64, 48, 0, 48, 0, 64, 64, 64 )

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( 64, 0, 0, 0, 0, 16, 64, 16 )

[sub_resource type="OccluderPolygon2D" id=16]
polygon = PoolVector2Array( 48, 64, 48, 16, 0, 16, 0, 0, 64, 0, 64, 64 )

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( 64, 0, 48, 0, 48, 64, 64, 64 )

[sub_resource type="OccluderPolygon2D" id=18]
polygon = PoolVector2Array( 0, 48, 0, 64, 64, 64, 64, 0, 48, 0, 48, 48 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 16, 64, 0, 64, 0, 48, 16, 48 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 64, 16, 48, 16, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 64, 40, 48, 40, 48, 16, 64, 16 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 64, 40, 0, 40, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 16, 64, 0, 64, 0, 48, 16, 48 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 16, 0, 16, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 64, 40, 48, 40, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 0, 16, 0, 16, 40, 0, 40 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 16, 0, 16, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 16, 40, 0, 40, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 64, 40, 48, 40, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 48, 16, 48, 16, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PoolVector2Array( 0, 0, 16, 0, 16, 40, 0, 40 )

[sub_resource type="ConvexPolygonShape2D" id=35]
points = PoolVector2Array( 64, 64, 0, 64, 0, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=36]
points = PoolVector2Array( 64, 40, 48, 40, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=37]
points = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 0, 0, 16, 0, 16, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=39]
points = PoolVector2Array( 64, 40, 16, 40, 16, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=40]
points = PoolVector2Array( 0, 0, 16, 0, 16, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=41]
points = PoolVector2Array( 64, 40, 0, 40, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=42]
points = PoolVector2Array( 64, 40, 0, 40, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=43]
points = PoolVector2Array( 64, 64, 48, 64, 48, 40, 64, 40 )

[sub_resource type="ConvexPolygonShape2D" id=44]
points = PoolVector2Array( 64, 64, 48, 64, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=45]
points = PoolVector2Array( 64, 64, 0, 64, 0, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=46]
points = PoolVector2Array( 64, 48, 48, 48, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=47]
points = PoolVector2Array( 64, 64, 0, 64, 0, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=48]
points = PoolVector2Array( 16, 64, 0, 64, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=49]
points = PoolVector2Array( 64, 64, 16, 64, 16, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=50]
points = PoolVector2Array( 64, 64, 48, 64, 48, 0, 64, 0 )

[sub_resource type="TileSet" id=6]
0/name = "topdown_floor.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 768, 256 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 18, Vector2( 0, 3 ), 16, Vector2( 1, 0 ), 176, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 50, Vector2( 1, 3 ), 48, Vector2( 2, 0 ), 184, Vector2( 2, 1 ), 186, Vector2( 2, 2 ), 58, Vector2( 2, 3 ), 56, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 26, Vector2( 3, 3 ), 24, Vector2( 4, 0 ), 187, Vector2( 4, 1 ), 434, Vector2( 4, 2 ), 182, Vector2( 4, 3 ), 250, Vector2( 5, 0 ), 440, Vector2( 5, 1 ), 510, Vector2( 5, 2 ), 447, Vector2( 5, 3 ), 62, Vector2( 6, 0 ), 248, Vector2( 6, 1 ), 507, Vector2( 6, 2 ), 255, Vector2( 6, 3 ), 59, Vector2( 7, 0 ), 190, Vector2( 7, 1 ), 218, Vector2( 7, 2 ), 155, Vector2( 7, 3 ), 442, Vector2( 8, 0 ), 432, Vector2( 8, 1 ), 438, Vector2( 8, 2 ), 446, Vector2( 8, 3 ), 54, Vector2( 9, 0 ), 506, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 511, Vector2( 9, 3 ), 63, Vector2( 10, 0 ), 504, Vector2( 10, 2 ), 443, Vector2( 10, 3 ), 191, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 251, Vector2( 11, 2 ), 219, Vector2( 11, 3 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [ Vector2( 5, 1 ), SubResource( 7 ), Vector2( 5, 2 ), SubResource( 8 ), Vector2( 6, 1 ), SubResource( 9 ), Vector2( 6, 2 ), SubResource( 10 ), Vector2( 8, 0 ), SubResource( 11 ), Vector2( 8, 1 ), SubResource( 12 ), Vector2( 8, 3 ), SubResource( 13 ), Vector2( 9, 3 ), SubResource( 14 ), Vector2( 10, 0 ), SubResource( 15 ), Vector2( 11, 0 ), SubResource( 16 ), Vector2( 11, 2 ), SubResource( 17 ), Vector2( 11, 3 ), SubResource( 18 ) ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 19 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 34 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 35 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 36 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 37 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 39 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 40 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 10, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 41 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 42 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 43 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 44 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 45 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 46 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 47 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 48 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 49 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 50 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFontData" id=5]
font_path = "res://CourierNewPSMT.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 5 )

[node name="Node" type="Node" groups=["Persist"]]
script = ExtResource( 3 )
IsMobile = true
DefaultPlayerStats = {
"Bullet Speed": 1000,
"Speed": 200
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2( 512, 300 )
color = Color( 0, 0, 0, 1 )

[node name="Gameplay" type="Node2D" parent="."]

[node name="Map" type="TileMap" parent="Gameplay"]
tile_set = SubResource( 6 )
centered_textures = true
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 8, 1, 0, 10, 2, 0, 10, 3, 0, 10, 4, 0, 10, 5, 0, 10, 6, 0, 10, 7, 0, 10, 8, 0, 10, 9, 0, 10, 10, 0, 10, 11, 0, 10, 12, 0, 10, 13, 0, 10, 14, 0, 10, 15, 0, 11, 65536, 0, 65544, 65537, 0, 131081, 65538, 0, 131081, 65539, 0, 131081, 65540, 0, 131078, 65541, 0, 196617, 65542, 0, 131077, 65543, 0, 131081, 65544, 0, 131081, 65545, 0, 131078, 65546, 0, 196617, 65547, 0, 131077, 65548, 0, 131081, 65549, 0, 131081, 65550, 0, 131081, 65551, 0, 131083, 131072, 0, 65544, 131073, 0, 131081, 131074, 0, 131081, 131075, 0, 131081, 131076, 0, 131083, 131078, 0, 65544, 131079, 0, 131081, 131080, 0, 131081, 131081, 0, 131083, 131083, 0, 65544, 131084, 0, 131081, 131085, 0, 131081, 131086, 0, 131081, 131087, 0, 131083, 196608, 0, 65544, 196609, 0, 131081, 196610, 0, 131081, 196611, 0, 131081, 196612, 0, 65542, 196613, 0, 10, 196614, 0, 65541, 196615, 0, 131081, 196616, 0, 131081, 196617, 0, 65542, 196618, 0, 10, 196619, 0, 65541, 196620, 0, 131081, 196621, 0, 131081, 196622, 0, 131081, 196623, 0, 131083, 262144, 0, 65544, 262145, 0, 131081, 262146, 0, 131081, 262147, 0, 131081, 262148, 0, 131078, 262149, 0, 196617, 262150, 0, 131077, 262151, 0, 131081, 262152, 0, 131081, 262153, 0, 131078, 262154, 0, 196617, 262155, 0, 131077, 262156, 0, 131081, 262157, 0, 131081, 262158, 0, 131081, 262159, 0, 131083, 262170, 0, 196608, 327680, 0, 65544, 327681, 0, 131081, 327682, 0, 131081, 327683, 0, 131081, 327684, 0, 131083, 327686, 0, 65544, 327687, 0, 131081, 327688, 0, 131081, 327689, 0, 131083, 327691, 0, 65544, 327692, 0, 131081, 327693, 0, 131081, 327694, 0, 131081, 327695, 0, 131083, 393216, 0, 65544, 393217, 0, 131081, 393218, 0, 131081, 393219, 0, 131081, 393220, 0, 65542, 393221, 0, 10, 393222, 0, 65541, 393223, 0, 131081, 393224, 0, 131081, 393225, 0, 65542, 393226, 0, 10, 393227, 0, 65541, 393228, 0, 131081, 393229, 0, 131081, 393230, 0, 131081, 393231, 0, 131083, 458752, 0, 65544, 458753, 0, 131081, 458754, 0, 131081, 458755, 0, 131081, 458756, 0, 131081, 458757, 0, 131081, 458758, 0, 131081, 458759, 0, 131081, 458760, 0, 131081, 458761, 0, 131081, 458762, 0, 131081, 458763, 0, 131081, 458764, 0, 131081, 458765, 0, 131081, 458766, 0, 131081, 458767, 0, 131083, 524288, 0, 65544, 524289, 0, 131081, 524290, 0, 131081, 524291, 0, 131081, 524292, 0, 131081, 524293, 0, 131081, 524294, 0, 131081, 524295, 0, 131081, 524296, 0, 131081, 524297, 0, 131081, 524298, 0, 131081, 524299, 0, 131081, 524300, 0, 131081, 524301, 0, 131081, 524302, 0, 131081, 524303, 0, 131083, 589824, 0, 196616, 589825, 0, 196617, 589826, 0, 196617, 589827, 0, 196617, 589828, 0, 196617, 589829, 0, 196617, 589830, 0, 196617, 589831, 0, 196617, 589832, 0, 196617, 589833, 0, 196617, 589834, 0, 196617, 589835, 0, 196617, 589836, 0, 196617, 589837, 0, 196617, 589838, 0, 196617, 589839, 0, 196619 )

[node name="FoesFolder" type="Node2D" parent="Gameplay"]
position = Vector2( 10000, 0 )

[node name="Player" parent="Gameplay" instance=ExtResource( 1 )]
position = Vector2( 512, 300 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="TitleScreen" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="UI/TitleScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 50.0
margin_right = -248.0
margin_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Barney is back"
autowrap = true
uppercase = true

[node name="Play" type="Button" parent="UI/TitleScreen"]
anchor_right = 0.098
anchor_bottom = 0.083
margin_left = 462.0
margin_top = 400.0
margin_right = 461.648
margin_bottom = 400.2
text = "Play"

[node name="PlayerMainMenuPos" type="Position2D" parent="UI/TitleScreen"]
position = Vector2( 512, 300 )

[node name="Aiming" parent="UI" instance=ExtResource( 4 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -232.0
margin_top = -256.0
margin_right = -32.0
margin_bottom = -56.0
visibility_mode = 1
use_input_actions = false

[node name="MovementJoystick" parent="UI" instance=ExtResource( 4 )]
visible = false
margin_left = 40.0
margin_top = -256.0
margin_right = 240.0
margin_bottom = -56.0
visibility_mode = 1

[node name="ScoreDisplay" type="Label" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 431.0
margin_top = 35.0
margin_right = -485.0
margin_bottom = -510.0
text = "Score: 0
"
align = 1
valign = 1
uppercase = true

[node name="Unused" type="Node" parent="."]

[connection signal="child_exiting_tree" from="Gameplay/FoesFolder" to="." method="_on_EnemyFolder_child_exiting_tree"]
[connection signal="died" from="Gameplay/Player" to="." method="_on_Player_died"]
[connection signal="pressed" from="UI/TitleScreen/Play" to="." method="_on_Play_pressed"]
